fix only admin can create/delete books, remove @Entity from model User, delete validation in service, create GetBooksByIdRequest, delete BookServiceException